--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,6 +45,7 @@ subjects:
 - !lcsh 'Middle Ages -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Historical fiction'
+- GITenberg
 tableOfContents: The story of the sestina -- The story of the tenson -- The story
   of the rat-trap -- The story of the choices -- The story of the housewife --The
   story of the satraps -- The story of the heritage -- The story of the scabbard --
